<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.advanced.mockserver.ui.home.HomeViewModel" />
        <variable
            name="homeFragment"
            type="com.advanced.mockserver.ui.home.HomeFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/secondary_color">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary_color"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="30dp"
                android:background="@drawable/background_content_header"
                app:layout_constraintTop_toTopOf="parent">



                <FrameLayout
                    android:id="@+id/frame_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/background_user_avatar"
                    app:layout_constraintStart_toStartOf="@id/linear_selected"
                    app:layout_constraintTop_toBottomOf="@id/text_title">

                    <com.makeramen.roundedimageview.RoundedImageView
                        android:id="@+id/image_contact"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:scaleType="centerCrop"
                        app:riv_oval="true"/>

                </FrameLayout>

                <TextView
                    android:id="@+id/text_name_user"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="@id/frame_image"
                    app:layout_constraintBottom_toBottomOf="@id/frame_image"
                    app:layout_constraintStart_toEndOf="@id/frame_image"
                    app:layout_constraintEnd_toStartOf="@id/frame_search"/>


                <TextView
                    android:id="@+id/text_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:padding="10dp"
                    android:text="@string/client_chat_app"
                    android:textColor="@color/primary_text_color"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <FrameLayout
                    android:id="@+id/frame_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_back"
                    android:padding="7dp"
                    app:layout_constraintBottom_toBottomOf="@id/frame_image"
                    app:layout_constraintEnd_toEndOf="@id/linear_selected"
                    app:layout_constraintTop_toTopOf="@id/frame_image">

                    <ImageView
                        android:id="@+id/image_search"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_search"
                        app:tint="@color/primary_text_color"
                        android:contentDescription="@string/image_search_user"/>

                </FrameLayout>

                <LinearLayout
                    android:id="@+id/linear_selected"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/background_cancel"
                    app:layout_constraintTop_toBottomOf="@id/frame_image"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:padding="10dp"
                    app:layout_constraintStart_toStartOf="parent">

                    <TextView
                        android:id="@+id/text_conversations"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/background_edit_text"
                        android:textColor="@color/white"
                        android:onClick="@{() -> homeFragment.onRecentConversationClick()}"
                        android:padding="12dp"
                        android:text="@string/conversations"
                        android:textStyle="bold"
                        android:layout_marginHorizontal="10dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/text_friends"/>

                    <TextView
                        android:id="@+id/text_friends"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/background_cancel"
                        android:paddingVertical="12dp"
                        android:paddingHorizontal="30dp"
                        android:layout_marginHorizontal="10dp"
                        android:textColor="@color/primary_text_color"
                        android:onClick="@{() -> homeFragment.onFriendClick()}"
                        android:text="@string/friends"
                        android:textStyle="bold"
                        app:layout_constraintTop_toTopOf="@id/text_conversations"
                        app:layout_constraintEnd_toEndOf="@id/frame_search"
                        app:layout_constraintStart_toEndOf="@id/text_conversations"
                        app:layout_constraintBottom_toBottomOf="@id/text_conversations" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/background_content_bottom"
            app:layout_constraintTop_toBottomOf="@id/constraint_heading"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/text_title_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginStart="30dp"
                android:textColor="@color/white"
                android:textSize="23sp"
                android:textStyle="bold"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycle_view_users"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        </LinearLayout>




    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>